# neuraldoc-rag

./: .gitignore  Pyrightconfig · JSON  RAG_Chat.py  README.md  Untitled-2.html  analytics.json  analytics.py  api.py  chat_history.py  config.py  config.yaml  e -i 4d2c804^  eval_results.json  gatekeeper.py  generate_sample_pdf.py  import langchain.py  main.py  my_pyright_out.txt  pyproject.toml  pyright.json  pyright2.json  pyright_utf8.json  requirements.txt  streamlit_app.py  streamlit_app_backup.py  upload_section_snippet.py
app/: __init__.py  analytics.py  api.py  auth.py  chat_history.py  streamlit_app.py
app/pages/: analytics_page.py  auth_page.py  chat.py  landing.py
chroma_db/: chroma.sqlite3
dashboard/: package-lock.json  package.json
dashboard/src/styles/: globals.css
pages/: 1ragchart.py
rag/: __init__.py  config.py  exceptions.py  hybrid_retriever.py  models.py  pipeline.py  vector_store.py
rag/evaluation/: __init__.py  ragas_evaluator.py
rag/generation/: __init__.py  graph.py  prompts.py
rag/ingestion/: __init__.py  chunker.py  pdf_parser.py
rag/retrieval/: __init__.py  hybrid_retriever.py  reranker.py  vector_store.py
scripts/: cleanup.ps1  demo_cli.py  gatekeeper.py  generate_sample_pdf.py
tests/: test_chunker.py  test_gatekeeper.py  test_hybrid_retriever.py
tests/fixtures/: README.md  golden_dataset.json
